infrastructure/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nestjs-to-redis
  namespace: test
spec:
  podSelector:
    matchLabels:
      cluster: redis-cluster
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: test
      ports:
        - protocol: TCP
          port: 6379
  egress: []
